--- a/sass/new/_footer.scss
+++ b/sass/new/_footer.scss
@@ -13,7 +13,8 @@ footer{
     article{
         @include flex(flex, flex-end, flex-start, 15px);
         
-        img{ margin-top: 20px;
+        img{ 
+    margin-top: 20px;
     width: 100%;
     height: auto;
     max-width: 50px;
